@@ -43,13 +43,6 @@ describe CController, " < BController" do
       get :in_c
       response.body.should == 'c:in_c'
     end
-
-    it "GET :render_parent should render a/render_parent inside b/render_parent inside c/render_parent" do
-      pending do
-        get :render_parent
-        response.body.should == "c:render_parent(b:render_parent(a:render_parent))"
-      end
-    end
   
     it "GET :partial_in_bc should render b/partial_in_bc then c/_partial_in_bc" do
       get :partial_in_bc
@@ -64,11 +57,6 @@ describe CController, " < BController" do
     it "GET :collection_in_bc should render b/collection_in_bc then c/_partial_in_bc" do
       get :collection_in_bc
       response.body.should == 'b:collection_in_bc => c:_partial_in_bc'
-    end
-    
-    it "GET :partial_render_parent should render b/partial_render_parent & c/_partial_render_parent & b/_partial_render_parent & a/_partial_render_parent" do
-      get :partial_render_parent
-      response.body.should == 'b:partial_render_parent => c:_partial_render_parent(b:_partial_render_parent(a:_partial_render_parent))'
     end
   end
 end
