@@ -1,1 +1,0 @@
-<%= inherited_template_path "b/in_ab", BController %>
